--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Calender</title>
+    <title>Calendar</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -25,132 +25,133 @@
             <div class="day-of-week">Friday</div>
             <div class="day-of-week">Saturday</div>
 
-            <div class="calender-box overflow">
+            <div class="calendar-box overflow">
                 <div class="date">1</div>
                 <textarea disabled></textarea>
             </div>
-            <div class="calender-box overflow">
+            <div class="calendar-box overflow">
                 <div class="date">2</div>
                 <textarea disabled></textarea>
             </div>
-            <div class="calender-box overflow">
+            <div class="calendar-box overflow">
                 <div class="date">3</div>
                 <textarea disabled></textarea>
             </div>
-            <div class="calender-box overflow">
+            <div class="calendar-box overflow">
                 <div class="date">4</div>
                 <textarea disabled></textarea>
             </div>
-            <div class="calender-box overflow">
+            <div class="calendar-box overflow">
                 <div class="date">5</div>
                 <textarea disabled></textarea>
             </div>
-            <div class="calender-box overflow">
+            <div class="calendar-box overflow">
                 <div class="date">6</div>
                 <textarea disabled></textarea>
             </div>
-            <div class="calender-box overflow">
+            <div class="calendar-box overflow">
                 <div class="date">7</div>
                 <textarea disabled></textarea>
             </div>
-            <div class="calender-box overflow">
+            <div class="calendar-box overflow">
                 <div class="date">8</div>
                 <textarea disabled></textarea>
             </div>
-            <div class="calender-box overflow">
+            <div class="calendar-box overflow">
                 <div class="date">9</div>
                 <textarea disabled></textarea>
             </div>
-            <div class="calender-box overflow">
+            <div class="calendar-box overflow">
                 <div class="date">10</div>
                 <textarea disabled></textarea>
             </div>
-            <div class="calender-box overflow">
+            <div class="calendar-box overflow">
                 <div class="date">11</div>
                 <textarea disabled></textarea>
             </div>
-            <div class="calender-box overflow">
+            <div class="calendar-box overflow">
                 <div class="date">12</div>
                 <textarea disabled></textarea>
             </div>
-            <div class="calender-box overflow">
+            <div class="calendar-box overflow">
                 <div class="date">13</div>
                 <textarea disabled></textarea>
             </div>
-            <div class="calender-box overflow">
+            <div class="calendar-box overflow">
                 <div class="date">14</div>
                 <textarea disabled></textarea>
             </div>
-            <div class="calender-box overflow">
+            <div class="calendar-box overflow">
                 <div class="date">15</div>
                 <textarea disabled></textarea>
             </div>
-            <div class="calender-box overflow">
+            <div class="calendar-box overflow">
                 <div class="date">16</div>
                 <textarea disabled></textarea>
             </div>
-            <div class="calender-box overflow">
+            <div class="calendar-box overflow">
                 <div class="date">17</div>
                 <textarea disabled></textarea>
             </div>
-            <div class="calender-box overflow">
+            <div class="calendar-box overflow">
                 <div class="date">18</div>
                 <textarea disabled></textarea>
             </div>
-            <div class="calender-box overflow">
+            <div class="calendar-box overflow">
                 <div class="date">19</div>
                 <textarea disabled></textarea>
             </div>
-            <div class="calender-box overflow">
+            <div class="calendar-box overflow">
                 <div class="date">20</div>
                 <textarea disabled></textarea>
             </div>
-            <div class="calender-box overflow">
+            <div class="calendar-box overflow">
                 <div class="date">21</div>
                 <textarea disabled></textarea>
             </div>
-            <div class="calender-box overflow">
+            <div class="calendar-box overflow">
                 <div class="date">22</div>
                 <textarea disabled></textarea>
             </div>
-            <div class="calender-box overflow">
+            <div class="calendar-box overflow">
                 <div class="date">23</div>
                 <textarea disabled></textarea>
             </div>
-            <div class="calender-box overflow">
+            <div class="calendar-box overflow">
                 <div class="date">24</div>
                 <textarea disabled></textarea>
             </div>
-            <div class="calender-box overflow">
+            <div class="calendar-box overflow">
                 <div class="date">25</div>
                 <textarea disabled></textarea>
             </div>
-            <div class="calender-box overflow">
+            <div class="calendar-box overflow">
                 <div class="date">26</div>
                 <textarea disabled></textarea>
             </div>
-            <div class="calender-box">
+            <div class="calendar-box overflow">
                 <div class="date">27</div>
-                <textarea></textarea>
+                <textarea disabled></textarea>
             </div>
-            <div class="calender-box">
+            <div class="calendar-box overflow">
                 <div class="date">28</div>
-                <textarea></textarea>
+                <textarea disabled></textarea>
             </div>
-            <div class="calender-box">
+            <div class="calendar-box overflow">
                 <div class="date">29</div>
-                <textarea></textarea>
+                <textarea disabled></textarea>
             </div>
-            <div class="calender-box">
+            <div class="calendar-box overflow">
                 <div class="date">30</div>
-                <textarea></textarea>
+                <textarea disabled></textarea>
             </div>
-            <div class="calender-box">
+            <div class="calendar-box overflow">
                 <div class="date">31</div>
-                <textarea></textarea>
+                <textarea disabled></textarea>
             </div>
             <div class="footer">
                 <h3>2023</h3>
+                <a href=""></a>
             </div>
         </div>
 
